Adicionei um parágrafo

--- a/ex001/index.html
+++ b/ex001/index.html
@@ -12,6 +12,7 @@
             Meu primeiro site
         </h1>
         <p>Vou mandar esse código para o GitHub.</p>
+        <p>Operação realizada com sucesso</p>
     </main>
     
 </body>
